--- a/demo/index.html
+++ b/demo/index.html
@@ -19,8 +19,16 @@
       <h3>Basic swipe-vpages demo</h3>
       <demo-snippet>
         <template>
+          <style>
+              swipe-vpages {
+                  height : 300px;
+              }
+          </style>
           <swipe-vpages>
-            <div style="background-color:blue;">aaa</div>  
+            <div style="background-color:#E67E22;"></div>  
+            <div style="background-color:#DAF7A6"></div>  
+            <div style="background-color:#00FFFF;"></div>  
+            <div style="background-color:#8A2BE2;"></div>  
           </swipe-vpages>
         </template>
       </demo-snippet>
